# ai-powered-ats

./: .dockerignore  .gitignore  Dockerfile  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS.md  QUICK_REFERENCE.md  README.md  SEE_ALL_ANALYSIS_FEATURE.md  architectural_decision.md  ats_matcher.db  infrastructure.md
.github/workflows/: deploy.yml  destroy.yml
backend/: .coverage  .env  .env.exampla  .gitignore  Dockerfile  REFACTORING_SUMMARY.md  app.py  ats_matcher.db  auth.py  check_payments.py  config.py  database.py  deploy.py  docker.md  lambda_handler.py  payment.py  pyproject.toml  requirements.txt  resume.py  run_tests.bat  run_tests.sh  usage.py
backend/archive/: check_payments.py
backend/auth/: auth.py
backend/db/: __init__.py  create_db.py  database.py
backend/logger/: app_logger.py
backend/routes/: payment.py  resume.py  usage.py
backend/scripts/: run_tests.bat  run_tests.sh
backend/tests/: test_app.py  test_auth_errors.py  test_basic_routes.py  test_health.py  test_payment_config.py  test_usage_route.py
client/: .env.example  index.html  package-lock.json  package.json  vite.config.js
client/src/: App.css  App.jsx  index.css
client/src/components/: AlertModal.jsx  Navigation.jsx  Toast.jsx  ToastContainer.jsx  UpgradeModal.jsx  UsageStatus.jsx  UserAvatar.jsx
client/utils/: storage.js
scripts/: check-db.sh  init-db.sh
terraform/: .terraform.lock.hcl  alb.tf  backend.tf  cloudwatch.tf  ecr.tf  ecs.tf  iam.tf  main.tf  outputs.tf  prod.tfvars  rds.tf  secrets.tf  security.tf  ssm.tf  terraform.tfvars.example  variables.tf  vpc.tf
(+12 files in other folders)
